<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" tools:context="com.accounting.app.NewCustomerActivity">

  <android.support.design.widget.TextInputLayout
      android:id="@+id/customer_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/title"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="0dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/el_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name_hint"
        android:maxLength="32" />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/customer_doc"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/title"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="60dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/el_doc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/doc_hint"
        android:maxLength="32" />

  </android.support.design.widget.TextInputLayout>

  <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginRight="32dp"
      android:layout_marginBottom="16dp"
      android:text="@string/new_customer"
      android:textSize="24sp"
      tools:layout_editor_absoluteX="0dp"
      tools:layout_editor_absoluteY="58dp" />


  <android.support.design.widget.TextInputLayout
      android:id="@+id/customer_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/title"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="120dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/el_description"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:inputType="textMultiLine"
        android:hint="@string/description_hint"
        android:maxLength="255" />

  </android.support.design.widget.TextInputLayout>


  <TextView
      android:id="@+id/selector_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:layout_marginTop="32dp"
      android:textSize="36sp" />

  <android.support.design.button.MaterialButton
      android:id="@+id/btn_date"
      android:layout_width="209dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/selector_value"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="-74dp"
      android:layout_marginEnd="180dp"
      android:layout_marginRight="180dp"
      android:layout_marginBottom="16dp"
      android:text="@string/btn_add_date_hint" />

  <android.support.design.button.MaterialButton
      android:id="@+id/btn_add"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/selector_value"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="-12dp"
      android:layout_marginEnd="24dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp"
      android:text="@string/btn_add_hint" />


</RelativeLayout>
